# map_reduce

./: CMakeLists.txt  README.md  conanfile.txt
src/: CMakeLists.txt  Container.h  FileReaders.h  Helpers.cpp  Helpers.h  IMap.h  IReduce.h  Map.h  Node.h  Reduce.h  main.cpp
tests/: CMakeLists.txt  container_tst.cpp  map_tst.cpp  node_tst.cpp  read_file_tst.cpp  reduce_tst.cpp  simple_tst.cpp  split_file_tst.cpp
tests/Test_examples/: simple_file.txt
